@@ -38,8 +38,9 @@
    Cinema DNG files are not affected by this.
 
  = Compile/build changes =
- * Old (0.19-compatibility) files (dcraw_common.cpp dcraw_fileio.cpp 
-   demosaic_packs.cpp) are removed from LibRaw repository.
+ * Old (0.19-compatibility) files (internal/dcraw_*.cpp  
+   internal/demosaic_packs.cpp src/libraw_cxx.cpp) are removed from LibRaw 
+   repository.
    Please switch to 'modern' multiple source files build.
 
  = API/ABI changes =
